# devtools

./: .gitignore  README.md  pyproject.toml  setup.py
.github/workflows/: deprector.yml  test-bwcompat.yml  test-deprector.yml
deprector/: README.md
deprector/src/deprector/: api.py  util.py
deprector/src/deprector/pytest_/: plugins.py
src/_idaes_v1_compat/: __init__.py  __main__.py
src/_idaes_v1_compat/definitions/: apps_uncertainty_propagation.py  internals.py
src/_idaes_v1_compat/directives/: module_attrs.py  overwrites.py  packages.py
src/bwcompat/: util.py
src/bwcompat/collect/: module_objects.py
src/bwcompat/patch/: __init__.py  base.py  directives.py  hooks.py  patchers.py  registry.py
src/bwcompat/verify/: __init__.py  __main__.py  plugins.py
src/deprector/: __init__.py  __main__.py  api.py  cli.py  depr.py  errors.py  module.py  registry.py  report.py  source.py  support.py
src/deprector/pytest_/: __init__.py  checks.py  plugin.py  plugins.py  run.py
src/idaes_devtools/: __init__.py  cli.py
