[build-system]
requires = [
    "setuptools >= 64",
    "setuptools_scm >= 7",
]
build-backend = "setuptools.build_meta"

[tool.setuptools_scm]

[project]
name = "idaes-bwcompat" 
readme = "README.md"
requires-python = ">= 3.8"
dependencies = [
    "pytest",
]
dynamic = ["version"]

[project.optional-dependencies]
testing = [
    "pytest >= 7",
]
[project.entry-points."bwcompat.registries"]
idaes-v1 = "_idaes_v1_compat:registry"

[project.entry-points.pytest11]
bwcompat-importables = "bwcompat.verify.plugins:test_importables"
bwcompat-activate = "bwcompat.verify.plugins:activate_registry"
